[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "the-poneglyph-system"
version = "0.1.0"
description = "Web-based SCADA simulator and field measurement platform for electrical substations"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "pyserial>=3.5",
]

[project.scripts]
poneglyph = "api:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line-length handled separately
