[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "poneglyph"
version = "2.0.0"
description = "SCADA Pro Console — Substation Load Test Platform"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["poneglyph*"]
